--- a/style.scss
+++ b/style.scss
@@ -14,20 +14,19 @@
 /**************/
 
 html {
-  font-size: 100%;
+  font-size: $fontSize;
 }
 
 body {
-	background: $white;
-  font: 18px/1.4 $helvetica;
+	background: $dimWhite;
+  font: 1rem $helvetica;
   color: $darkGray;
 }
 
 .container {
   margin: 0 auto;
-  max-width: 740px;
   padding: 0 10px;
-  width: 100%;
+  max-width: 800px;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -45,27 +44,27 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: 30px;
+  font-size: 1.8rem;
   a {
     color: inherit;
   }
 }
 
 h2 {
-  font-size: 24px;
+  font-size: 1.5rem;
 }
 
 h3 {
-  font-size: 20px;
+  font-size: 1.2rem;
 }
 
 h4 {
-  font-size: 18px;
+  font-size: 1.2rem;
   color: $gray;
 }
 
 p {
-  margin: 15px 0;
+  margin: 1rem 0;
 }
 
 a {
@@ -152,11 +151,13 @@ img {
 
 .wrapper-masthead {
   margin-bottom: 50px;
+  border-bottom: 1px black solid;
+  background: rgb(100, 98, 98);
+  color: black;
 }
 
 .masthead {
   padding: 20px 0;
-  border-bottom: 1px solid $lightGray;
 
   @include mobile {
     text-align: center;
@@ -192,7 +193,7 @@ img {
 
 .site-name {
   margin: 0;
-  color: $darkGray;
+  color: $white;
   cursor: pointer;
   font-family: $helveticaNeue;
   font-weight: 300;
@@ -202,7 +203,7 @@ img {
 
 .site-description {
   margin: -5px 0 0 0;
-  color: $gray;
+  color: $dimWhite;
   font-size: 16px;
 
   @include mobile {
@@ -225,7 +226,7 @@ nav {
 
   a {
     margin-left: 20px;
-    color: $darkGray;
+    color: $white;
     text-align: right;
     font-weight: 300;
     letter-spacing: 1px;
