--- a/style.scss
+++ b/style.scss
@@ -242,6 +242,27 @@ nav {
 // .main
 //
 
+ul.posts-list {
+  list-style-type: none;
+  
+  li {
+    margin: 30px 0px;
+
+    a { color: $gray; }
+    a:hover { 
+      &, small {
+        color: $black;
+        text-decoration-line: underline;
+      }
+    }
+
+    small {
+      color: $lightGray;
+      font-size: 0.8em;
+    }
+  }
+}
+
 .posts > .post {
   padding-bottom: 2em;
   border-bottom: 1px solid $lightGray;
