--- a/style.scss
+++ b/style.scss
@@ -15,7 +15,7 @@
 
 html {
   font-size: $fontSize;
-  @include mobile { font-size: 14px; }
+  @include small { font-size: 14px; }
 }
 
 body {
@@ -155,6 +155,12 @@ img {
   border-bottom: 1px black solid;
   background: rgb(100, 98, 98);
   color: black;
+  position: sticky;
+  top: 0;
+
+  @include mobile {
+    position: initial;
+  }
 }
 
 .masthead {
@@ -243,18 +249,38 @@ nav {
 // .main
 //
 
+#main {
+  margin: 10px;
+  display: grid;
+  grid-template-columns: minmax(260px, max-content) minmax(min-content, 800px);
+  grid-gap: 30px;
+
+  @include small {
+    display: block;
+
+    #side-menu { display: none }
+  }
+}
+
 ul.posts-list {
+  border-right: 1px solid $lightGray;
+  padding: 0px;
   list-style-type: none;
   
   li {
-    margin: 30px 0px;
+    line-height: 1.2em;
 
-    a { color: $gray; }
+    a { color: $gray }
     a:hover { 
-      &, small {
-        color: $black;
-        text-decoration-line: underline;
-      }
+      color: $black;
+      text-decoration-line: underline;
+
+      small { color: $gray }
+    }
+
+    &::marker {
+      color: red;
+      margin: 0px 0px 0px 0px;
     }
 
     small {
