--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,13 +18,14 @@
   <body>
     <div class="wrapper-masthead">
       <div class="container">
-        <header class="masthead clearfix">
-          <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
+        <header class="masthead">
 
-          <div class="site-info">
-            <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
-            <p class="site-description">{{ site.description }}</p>
-          </div>
+          <a class="site-info" href="{{ site.baseurl }}/">
+            <h1 class="site-name">
+              {{ site.name }}
+            </h1> 
+            <span class="site-description">{{ site.description }}</span>
+          </a>
 
           <nav>
             <a href="{{ site.baseurl }}/">Home</a>
