--- a/style.scss
+++ b/style.scss
@@ -13,15 +13,14 @@
 /* BASE RULES */
 /**************/
 
-html {
-  font-size: $fontSize;
-  @include small { font-size: 14px; }
-}
+html { font-size: $fontSize }
 
 body {
 	background: $dimWhite;
   font: 1rem $helvetica;
   color: $darkGray;
+
+  @include small { font-size: 0.8rem }
 }
 
 .container {
@@ -130,18 +129,6 @@ img {
   background: $lightGray;
 }
 
-// Nicolas Gallagher's micro clearfix hack
-// http://nicolasgallagher.com/micro-clearfix-hack/
-.clearfix:before,
-.clearfix:after {
-    content: " ";
-    display: table;
-}
-
-.clearfix:after {
-    clear: both;
-}
-
 /*********************/
 /* LAYOUT / SECTIONS */
 /*********************/
@@ -153,10 +140,9 @@ img {
 .wrapper-masthead {
   margin-bottom: 50px;
   border-bottom: 1px black solid;
-  background: rgb(100, 98, 98);
-  color: black;
+  background-color: rgb(87,180,175);
   position: sticky;
-  top: 0;
+  top: 0; // necesario para `position: sticky`
 
   @include mobile {
     position: initial;
@@ -164,72 +150,35 @@ img {
 }
 
 .masthead {
-  padding: 20px 0;
+  display: flex;
+  justify-content: space-between;
 
   @include mobile {
     text-align: center;
   }
 }
 
-.site-avatar {
-  float: left;
-  width: 70px;
-  height: 70px;
-  margin-right: 15px;
-
-  @include mobile {
-    float: none;
-    display: block;
-    margin: 0 auto;
-  }
-
-  img {
-    border-radius: 5px;
-  }
-}
-
-.site-info {
-  float: left;
-
-  @include mobile {
-    float: none;
-    display: block;
-    margin: 0 auto;
-  }
-}
+.site-info { display: inline-block }
 
 .site-name {
+  display: inline-block;
   margin: 0;
   color: $white;
-  cursor: pointer;
-  font-family: $helveticaNeue;
-  font-weight: 300;
-  font-size: 28px;
+  font-weight: normal;
   letter-spacing: 1px;
 }
 
 .site-description {
-  margin: -5px 0 0 0;
+  display: inline-block;
   color: $dimWhite;
-  font-size: 16px;
-
-  @include mobile {
-    margin: 3px 0;
-  }
 }
 
 nav {
-  float: right;
-  margin-top: 23px; // @TODO: Vertically middle align
+  display: block;
+  align-self: center;
   font-family: $helveticaNeue;
-  font-size: 18px;
 
-  @include mobile {
-    float: none;
-    margin-top: 9px;
-    display: block;
-    font-size: 16px;
-  }
+  @include mobile { display: block }
 
   a {
     margin-left: 20px;
