Cambia blog por archivo y actualiza estilos

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,9 +28,8 @@
           </a>
 
           <nav>
-            <a href="{{ site.baseurl }}/">Home</a>
-            <a href="{{ site.baseurl }}/blog">Blog</a>
-            <a href="{{ site.baseurl }}/about">About</a>
+            <a href="{{ site.baseurl }}/archivo">Archivo</a>
+            <a href="{{ site.baseurl }}/about">Acerca de</a>
           </nav>
         </header>
       </div>
