--- a/style.scss
+++ b/style.scss
@@ -27,6 +27,7 @@ body {
   margin: 0 auto;
   padding: 0 10px;
   max-width: 800px;
+  word-wrap: break-word;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -152,16 +153,13 @@ img {
 .masthead {
   display: flex;
   justify-content: space-between;
-
-  @include mobile {
-    text-align: center;
-  }
 }
 
-.site-info { display: inline-block }
+.site-info { flex-wrap: nowrap }
 
 .site-name {
-  display: inline-block;
+  // display: inline-block;
+  flex-wrap: nowrap;
   margin: 0;
   color: $white;
   font-weight: normal;
@@ -174,8 +172,7 @@ img {
 }
 
 nav {
-  display: block;
-  align-self: center;
+  align-self: center; // vertical align in flexbox
   font-family: $helveticaNeue;
 
   @include mobile { display: block }
