--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
 
   <body>
     <div class="wrapper-masthead">
-      <div class="container">
+      <!-- <div class="container"> -->
         <header class="masthead">
 
           <a class="site-info" href="{{ site.baseurl }}/">
@@ -34,7 +34,7 @@
             {% endfor %}
           </nav>
         </header>
-      </div>
+      <!-- </div> -->
     </div>
 
     <div id="main" role="main">
