--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -1,10 +1,9 @@
-div.highlight {
+pre.highlight {
   margin: 2rem 0;
   overflow: auto;
   font-size: 0.8rem;
   border: 1px solid #437c90;
-  box-shadow: 0px 0px 6px 1px #437c90;
-  overflow: auto;
+  box-shadow: 0px 0px 3px 1px black;//rgba(69,125,146, 70);
   padding: 7px 7px 7px 10px;
 }
 
