--- a/style.scss
+++ b/style.scss
@@ -20,13 +20,13 @@ body {
   font: 1rem $helvetica;
   background: #2f2f2f;
   overflow-y: scroll;
-  height: 100vh; // <- importante para posicionar footer
+  height: 100vh; // <- importante para posicionar footer, que se hace por js
 
   @include small { font-size: 0.8rem }
 }
 
 .container {
-  margin: 0 auto;
+  margin: 0;
   padding: 0 10px;
   width: 100%;
   max-width: 800px;
@@ -160,9 +160,13 @@ img {
   display: flex;
   justify-content: space-between;
   margin: 0 20px;
+
+  @include mobile { display: block }
 }
 
-.site-info { flex-wrap: nowrap }
+.site-info { 
+  flex-wrap: nowrap;
+}
 
 .site-name {
   display: inline-block;
@@ -183,7 +187,6 @@ nav {
   @include mobile { display: block }
 
   a {
-    
     padding: 10px 0;
     margin-left: 20px;
     color: rgb(71, 66, 66);
@@ -193,7 +196,7 @@ nav {
 
     @include mobile {
       margin: 0 10px;
-      display: block;
+      // display: block;
     }
 
     &:hover { color: white }
@@ -212,17 +215,17 @@ nav {
 #main {
   margin: 10px;
   display: grid;
-  grid-template-columns: minmax(260px, max-content) minmax(min-content, 800px);
+  grid-template-columns: 
+    minmax(260px, max-content) 
+    // 100vw - .posts-list width - margin - gap - 20px de bordes y demases
+    calc(100vw - 260px - 20px - 30px - 20px); 
   grid-gap: 30px;
+  max-width: 100vw;
 
   @include small {
     display: block;
 
     #side-menu { display: none }
-  }
-
-  #main > .container:first-child {
-    width: 2300px;
   }
 }
 
